--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
               <div class="col-lg-4 col-md-4">
                 <div class="cource-box"><a href="#"><img class="img-responsive" src="template/images/course-1.jpg" alt=""></a>
                   <div class="cource-text">
-                    <h4><a href="#">Photoshop - Web Deisgn</a> <span>$195</span></h4>
+                    <h4><a href="#">faishal - Web Deisgn</a> <span>$195</span></h4>
                     <p>Suspendisse ante mi iaculis ac eleifend id venenatis non eros. Sed rhoncus gravida eli eu sollicitudin.</p>
                     <a href="#" class="btn btn-small">Read More</a> </div>
                 </div>
