--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <meta http-equiv='cache-control' content='no-cache'> 
 <meta http-equiv='expires' content='0'> 
 <meta http-equiv='pragma' content='no-cache'>
+<meta name="google-site-verification" content="hvmdA3BK_scpf6YJdMVryb-M0rKwVf52IVCqj02TRnA" />
 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 <title>Yayasan Fahmil Quran Website</title>
 
